src/objects/Offers_Frequency_Rate_Plan_Map__mdt.object
<CustomObject>
    <description>Defines mapping between ZOffer frequency and respective product rate plan.</description>
    <fields>
        <fullName>API_Frequency__c</fullName>
        <description>Defines what should be the frequency value when it is passed to API.</description>
        <inlineHelpText>Defines what should be the frequency value when it is passed to API.</inlineHelpText>
        <label>API Frequency</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Defines if mapping is active. Making mapping inactive will disable the specific offer frequency results for Offer Handler.</description>
        <inlineHelpText>Defines if mapping is active. Making mapping inactive will disable the specific offer frequency results for Offer Handler.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Rate_Plan_Name__c</fullName>
        <description>Defines target rate plan name for the frequency.</description>
        <inlineHelpText>Defines target rate plan name for the frequency.</inlineHelpText>
        <label>Target Rate Plan Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Offers Frequency Rate Plan Map</label>
    <pluralLabel>Offers Frequency Rate Plan Map</pluralLabel>
</CustomObject>